[project]
name = "cyberpowder-aiml-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "datasets>=3.4.1",
    "huggingface-hub>=0.29.3",
    "influxdb-client>=1.48.0",
    "jupyter>=1.1.1",
    "jupytext>=1.16.7",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "onnx>=1.17.0",
    "onnxruntime>=1.21.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

# Note: To ensure CPU-only PyTorch installation, use:
# uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
